# exchange

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  common.hpp  design.md  devenv.nix
client/: CMakeLists.txt
client/src/: main.cpp  network.cpp  network.hpp
common/: config.hpp  proto.hpp
common/include/: config.hpp  proto.hpp
engine/: CMakeLists.txt  main.cpp
engine/src/: main.cpp  network.cpp  network.hpp
engine/tests/: test_engine.cpp
gateway/: CMakeLists.txt  main.cpp
gateway/src/: client.cpp  client.hpp  config.hpp  main.cpp  network.cpp  network.hpp
gateway/tests/: test_gateway.cpp
